Fixing bug 108912. Opening the accountmanager window panel for any activity is having adverse affect on the smtp server of the associated identity. Fixing the situation to use the smtp server of the identity only when the key is valid. In all other cases, default smtp server will be used to send messages. r=ducarroz, sr=sspitzer, a=asa@mozilla.org